Implement Double Jump and Jump Charge As CharacterMovement and Gameplay Tag

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,4 +10,5 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="AirStop",DevComment="")
 +GameplayTagList=(Tag="Jump",DevComment="Jump")
++GameplayTagList=(Tag="Move",DevComment="")
 
